add automatic patching of core & hwid using pio

--- a/platformio.ini
+++ b/platformio.ini
@@ -13,3 +13,15 @@ platform = atmelavr
 board = leonardo
 framework = arduino
 lib_deps = paulstoffregen/TimerOne@^1.1
+
+; upload using USBAsp programmer (as we disable CDC)
+upload_protocol = usbasp
+upload_flags = -e
+
+; patch core to allow for CDC_DISABLED flag (see https://github.com/arduino/ArduinoCore-avr/pull/383)
+; also patch USB VID+PID
+; this is so that we can use the UPS with linux / NUT. while developement (or when only using Windows / MacOS, you may comment these lines)
+extra_scripts = 
+    pre:patch_core.py
+    pre:patch_hwid.py
+build_flags = -D CDC_DISABLED 
